results/cppcheck_2.11.txt
➤ cppcheck --version
Cppcheck 2.11

➤ cppcheck tests/*.cpp
Checking tests/array_bounds_1.cpp ...
tests/array_bounds_1.cpp:7:9: error: Array 'numbers[3]' accessed at index 3, which is out of bounds. [arrayIndexOutOfBounds]
 numbers[3] = 3; // oops, array index out of bounds
        ^
1/68 files checked 1% done
Checking tests/array_bounds_2.cpp ...
tests/array_bounds_2.cpp:7:16: error: Array 'numbers[3]' accessed at index 3, which is out of bounds. [arrayIndexOutOfBounds]
 return numbers[3]; // oops, array index out of bounds
               ^
2/68 files checked 3% done
Checking tests/array_bounds_3.cpp ...
tests/array_bounds_3.cpp:8:16: error: Array 'numbers[3]' accessed at index 3, which is out of bounds. [arrayIndexOutOfBounds]
 return numbers[index]; // oops, array index out of bounds
               ^
3/68 files checked 5% done
Checking tests/array_bounds_4.cpp ...
tests/array_bounds_4.cpp:7:9: error: Array 'numbers[3]' accessed at index -1, which is out of bounds. [negativeIndex]
 numbers[-1] = -1; // oops, array index out of bounds
        ^
4/68 files checked 6% done
Checking tests/array_bounds_5.cpp ...
tests/array_bounds_5.cpp:7:16: error: Array 'numbers[3]' accessed at index -1, which is out of bounds. [negativeIndex]
 return numbers[-1]; // oops, array index out of bounds
               ^
5/68 files checked 8% done
Checking tests/array_bounds_6.cpp ...
tests/array_bounds_6.cpp:8:16: error: Array 'numbers[3]' accessed at index -1, which is out of bounds. [negativeIndex]
 return numbers[index]; // oops, array index out of bounds
               ^
6/68 files checked 10% done
Checking tests/array_braces_missing.cpp ...
7/68 files checked 10% done
Checking tests/assignment_in_condition_1.cpp ...
8/68 files checked 13% done
Checking tests/assignment_in_condition_2.cpp ...
9/68 files checked 14% done
Checking tests/bool_compare.cpp ...
10/68 files checked 16% done
Checking tests/branches_identical_1.cpp ...
11/68 files checked 18% done
Checking tests/branches_identical_2.cpp ...
12/68 files checked 19% done
Checking tests/branches_identical_3.cpp ...
13/68 files checked 21% done
Checking tests/cast_unnecessary.cpp ...
14/68 files checked 23% done
Checking tests/code_unreachable_1.cpp ...
15/68 files checked 25% done
Checking tests/code_unreachable_2.cpp ...
16/68 files checked 26% done
Checking tests/code_unreachable_3.cpp ...
17/68 files checked 28% done
Checking tests/comment.cpp ...
18/68 files checked 28% done
Checking tests/constant_expression.cpp ...
19/68 files checked 30% done
Checking tests/constant_overflow.cpp ...
20/68 files checked 30% done
Checking tests/division_by_zero_1.cpp ...
tests/division_by_zero_1.cpp:5:15: error: Division by zero. [zerodiv]
 return alpha / 0; // oops, division by zero
              ^
21/68 files checked 32% done
Checking tests/division_by_zero_2.cpp ...
22/68 files checked 33% done
Checking tests/enum_unhandled.cpp ...
23/68 files checked 36% done
Checking tests/enum_value.cpp ...
24/68 files checked 37% done
Checking tests/extra_tokens.cpp ...
25/68 files checked 37% done
Checking tests/file_empty.cpp ...
26/68 files checked 37% done
Checking tests/format_string_1.cpp ...
tests/format_string_1.cpp:7:15: error: Null pointer dereference [nullPointer]
 printf("%s", 0); // oops, zero pointer access
              ^
27/68 files checked 38% done
Checking tests/format_string_2.cpp ...
28/68 files checked 40% done
Checking tests/format_string_3.cpp ...
29/68 files checked 41% done
Checking tests/function_parameter_unused.cpp ...
30/68 files checked 43% done
Checking tests/function_without_prototype.cpp ...
31/68 files checked 44% done
Checking tests/function_without_return_value.cpp ...
32/68 files checked 45% done
Checking tests/identifier_undefined.cpp ...
Checking tests/identifier_undefined.cpp: IDENTIFIER_UNDEFINED...
33/68 files checked 46% done
Checking tests/implicit_conversion_1.cpp ...
34/68 files checked 47% done
Checking tests/implicit_conversion_2.cpp ...
35/68 files checked 49% done
Checking tests/implicit_conversion_3.cpp ...
36/68 files checked 50% done
Checking tests/label_unused.cpp ...
37/68 files checked 51% done
Checking tests/logical_not.cpp ...
38/68 files checked 53% done
Checking tests/member_init_reorder.cpp ...
39/68 files checked 54% done
Checking tests/null_pointer_access_1.cpp ...
40/68 files checked 55% done
Checking tests/null_pointer_access_2.cpp ...
tests/null_pointer_access_2.cpp:8:3: warning: Possible null pointer dereference: tmp [nullPointer]
 *tmp = 1;  // oops, q may be NULL
  ^
tests/null_pointer_access_2.cpp:5:13: note: Assignment 'tmp=0', assigned value is 0
 int *tmp = 0;
            ^
tests/null_pointer_access_2.cpp:6:17: note: Assuming condition is false
 if (0 <= value && value < 10)
                ^
tests/null_pointer_access_2.cpp:8:3: note: Null pointer dereference
 *tmp = 1;  // oops, q may be NULL
  ^
41/68 files checked 58% done
Checking tests/parentheses.cpp ...
42/68 files checked 59% done
Checking tests/pointer_compare.cpp ...
43/68 files checked 61% done
Checking tests/recursive_include.cpp ...
tests/recursive_include.cpp:1:0: error: #include nested too deeply [preprocessorErrorDirective]
#include "recursive_include.cpp" // oops, recursive #include
^
44/68 files checked 61% done
Checking tests/shift_count_negative.cpp ...
tests/shift_count_negative.cpp:5:15: error: Shifting by a negative value is undefined behaviour [shiftNegative]
 return value << -1; // oops, shift count is negative
              ^
45/68 files checked 63% done
Checking tests/shift_count_overflow.cpp ...
tests/shift_count_overflow.cpp:5:15: error: Shifting 32-bit value by 66 bits is undefined behaviour [shiftTooManyBits]
 return value << 66; // oops, shift count is too high
              ^
46/68 files checked 64% done
Checking tests/shift_overflow.cpp ...
47/68 files checked 66% done
Checking tests/shift_value_negative.cpp ...
48/68 files checked 67% done
Checking tests/stack_address_returned.cpp ...
tests/stack_address_returned.cpp:7:9: error: Returning pointer to local variable 'array' that will be invalid when returning. [returnDanglingLifetime]
 return array; // oops, returns stack address
        ^
tests/stack_address_returned.cpp:7:9: note: Array decayed to pointer here.
 return array; // oops, returns stack address
        ^
tests/stack_address_returned.cpp:5:6: note: Variable created here.
 int array[10] = {};
     ^
tests/stack_address_returned.cpp:7:9: note: Returning pointer to local variable 'array' that will be invalid when returning.
 return array; // oops, returns stack address
        ^
49/68 files checked 68% done
Checking tests/static_const_unused.cpp ...
50/68 files checked 69% done
Checking tests/static_function_unused.cpp ...
51/68 files checked 70% done
Checking tests/switch_body_empty.cpp ...
52/68 files checked 71% done
Checking tests/switch_code_unreachable.cpp ...
53/68 files checked 74% done
Checking tests/switch_default_missing.cpp ...
54/68 files checked 76% done
Checking tests/value_unused_1.cpp ...
55/68 files checked 78% done
Checking tests/value_unused_2.cpp ...
56/68 files checked 79% done
Checking tests/variable_assignment.cpp ...
57/68 files checked 81% done
Checking tests/variable_compare_1.cpp ...
58/68 files checked 83% done
Checking tests/variable_compare_2.cpp ...
59/68 files checked 85% done
Checking tests/variable_compare_3.cpp ...
60/68 files checked 87% done
Checking tests/variable_compare_4.cpp ...
61/68 files checked 88% done
Checking tests/variable_init_self.cpp ...
tests/variable_init_self.cpp:5:14: error: Uninitialized variable: alpha [legacyUninitvar]
 int alpha = alpha; // oops, variable initialized by itself
             ^
62/68 files checked 90% done
Checking tests/variable_shadowed_1.cpp ...
63/68 files checked 92% done
Checking tests/variable_shadowed_2.cpp ...
64/68 files checked 93% done
Checking tests/variable_size_array.cpp ...
65/68 files checked 95% done
Checking tests/variable_unsequenced.cpp ...
66/68 files checked 97% done
Checking tests/variable_unused.cpp ...
67/68 files checked 98% done
Checking tests/variable_used_uninitialized.cpp ...
tests/variable_used_uninitialized.cpp:8:3: error: Uninitialized variable: beta [uninitvar]
  beta++; // oops, variable used uninitialized
  ^
68/68 files checked 100% done

➤
